--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -133,7 +133,7 @@
   position: absolute;
   top: 0;
   /*change the width depending on the quote*/
-  width: 80%;
+  width: 100%;
   z-index: 2;
 }
 
