--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -123,4 +123,9 @@
     width: 20%;
     height: 100%;  
   }
+  
+  .skillsButtonActive {
+    width: 20%;
+    height: 100%;
+  }
 }
